# drogue-neopixel

./: Cargo.toml  README.md
.cargo/: config.toml
application/: Cargo.toml  Embed.toml  build.rs  memory.x
application/src/: app.rs  board.rs  control.rs  controller.rs  fmt.rs  gatt.rs  led.rs  main.rs  runner.rs  softdevice.rs  watchdog.rs
application/src/pattern/: countries.rs  fire.rs  mod.rs  rainbow.rs
bootloader/: Cargo.toml  build.rs
bootloader/src/: main.rs
