[package]
edition = "2021"
name = "neopixel-firmware"
version = "0.1.0"
authors = ["Ulf Lilleengen <lulf@redhat.com>"]
resolver = "2"

[dependencies]
defmt = { version = "0.3" }
defmt-rtt = { version = "0.3.2", optional = true }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
panic-reset = { version = "0.1.1", optional = true }
static_cell = "1" # deprecates "Forever"

num = { version = "0.4", default-features = false }

#cortex-m = { version = "0.7" }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

embassy-boot = { version = "0.1.0" }
embassy-boot-nrf = { version = "0.1.0" }
embassy-executor = { version = "0.1.0", default-features = false, features = ["integrated-timers"] }
embassy-futures = { version = "0.1.0", default-features = false }
embassy-nrf = { version = "0.1.0", default-features = false, features = ["nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "unstable-traits" ] }
embassy-sync = { version = "0.1.0", default-features = false }
embassy-time = { version = "0.1.0", default-features = false }
embedded-hal = { version = "0.2", features = ["unproven"] }
embedded-hal-async = { version = "=0.1.0-alpha.1" }

ector = { version = "0.1.0", default-features = false }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }

bitflags = { version = "1.3", default-features = false }
heapless = "0.7"
cfg-if = "1.0.0"
strum = { version = "0.24", default-features = false, features = ["derive"] }
itertools = { version = "0.10", default-features = false }
libm = { version = "0.2" }

#nrf-smartled = { version = "0.5.0", features= ["52840"] }
#choreographer = "0.0.4"

[dependencies.drogue-device]
version = "0.1.0"
default-features = false
features = [
    "time",
    "neopixel",
    "nrf",
    #"ble+nrf52840"
]

[dependencies.palette]
version = "0.6"
default-features = false
features = ["libm"] # Uses libm instead of std for floating point math

[features]
default = [
    "panic-reset"
]
ble = []
debug = [
    "panic-probe",
    "drogue-device/defmt",
    "embassy-executor/defmt",
    "embassy-nrf/defmt",
    "embassy-boot-nrf/defmt",
    "defmt-rtt",
]
